[gd_scene load_steps=7 format=3 uid="uid://71sum6eg4dwf"]

[ext_resource type="Script" path="res://main.gd" id="1_rw8p0"]
[ext_resource type="Script" path="res://hexagrid.gd" id="2_agq4s"]
[ext_resource type="Script" path="res://hexagrid_renderer.gd" id="3_hly1x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nv72p"]
bg_color = Color(0.25098, 0.25098, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2250"]
bg_color = Color(0.25098, 0.25098, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wj7gq"]
bg_color = Color(0.25098, 0.25098, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[node name="Main" type="Node2D"]
script = ExtResource("1_rw8p0")

[node name="Hexagrid" type="Node" parent="."]
script = ExtResource("2_agq4s")

[node name="HexagridRenderer" type="Node2D" parent="."]
script = ExtResource("3_hly1x")
side_color = Color(0.58801, 0.312638, 0.960443, 1)
interior_color = Color(0.465716, 0.341737, 0.957284, 1)
line_color = Color(0.690196, 0.690196, 0.690196, 1)
triangle_color = Color(0.858824, 0.133333, 0.196078, 1)
quad_color = Color(1, 0.631373, 0.643137, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 350.0
offset_bottom = 250.0
color = Color(0.501961, 0.501961, 0.501961, 0.501961)

[node name="VFlowContainer" type="VFlowContainer" parent="."]
custom_minimum_size = Vector2(350, 250)
offset_left = 10.0
offset_top = 10.0
offset_right = 360.0
offset_bottom = 260.0
size_flags_horizontal = 3

[node name="Sides_Container" type="HFlowContainer" parent="VFlowContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Sides_Label" type="Label" parent="VFlowContainer/Sides_Container"]
layout_mode = 2
text = "Sides"

[node name="Sides_Slider" type="HSlider" parent="VFlowContainer/Sides_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_nv72p")
min_value = 2.0
max_value = 12.0
value = 6.0
tick_count = 11

[node name="Seed_Container" type="HFlowContainer" parent="VFlowContainer"]
layout_mode = 2

[node name="Seed_Label" type="Label" parent="VFlowContainer/Seed_Container"]
layout_mode = 2
text = "Seed"

[node name="Seed_Slider" type="HSlider" parent="VFlowContainer/Seed_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_a2250")
min_value = 1.0
max_value = 65535.0
value = 1337.0

[node name="Grouping_Container" type="HFlowContainer" parent="VFlowContainer"]
layout_mode = 2

[node name="Grouping_Label" type="Label" parent="VFlowContainer/Grouping_Container"]
layout_mode = 2
text = "Grouping"

[node name="Grouping_Slider" type="HSlider" parent="VFlowContainer/Grouping_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_wj7gq")
min_value = 1.0
max_value = 20.0
value = 6.0

[node name="Relax_Check" type="CheckBox" parent="VFlowContainer"]
layout_mode = 2
text = "Relax"

[node name="Relax_Side_Check" type="CheckBox" parent="VFlowContainer"]
visible = false
layout_mode = 2
text = "Relax Side"

[node name="Draw_Point_Check" type="CheckBox" parent="VFlowContainer"]
layout_mode = 2
text = "Render Points"

[node name="Draw_Sectors_Check" type="CheckBox" parent="VFlowContainer"]
layout_mode = 2
text = "Draw Sectors"

[connection signal="drag_ended" from="VFlowContainer/Sides_Container/Sides_Slider" to="." method="_on_sides_slider_drag_ended"]
[connection signal="drag_ended" from="VFlowContainer/Seed_Container/Seed_Slider" to="." method="_on_seed_slider_drag_ended"]
[connection signal="drag_ended" from="VFlowContainer/Grouping_Container/Grouping_Slider" to="." method="_on_grouping_slider_drag_ended"]
[connection signal="toggled" from="VFlowContainer/Relax_Check" to="." method="_on_relax_check_toggled"]
[connection signal="toggled" from="VFlowContainer/Relax_Side_Check" to="." method="_on_relax_side_check_toggled"]
[connection signal="toggled" from="VFlowContainer/Draw_Point_Check" to="." method="_on_draw_point_check_toggled"]
[connection signal="toggled" from="VFlowContainer/Draw_Sectors_Check" to="." method="_on_draw_sectors_check_toggled"]
